# pt-deputados

./: .gitignore  README.md  cli.py  models.py  parsers.py  pyproject.toml  scraper.py
.github/workflows/: update.yml
data/: deputies.jsonl  deputies.parquet
examples/: python_usage.py  r_usage.R
